Manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noteapp-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: www.wsedf.online 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotnet-noteapp
                port:
                  number: 80
    - host: wsedf.online 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotnet-noteapp
                port:
                  number: 80
  tls:
    - hosts:
        - www.wsedf.online 
        - wsedf.online 
      secretName: wsedf.online-co-tls
